--- a/frontend/nginx-1.20.2/conf/nginx.conf
+++ b/frontend/nginx-1.20.2/conf/nginx.conf
@@ -51,7 +51,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   html/sky;
+            root   /Users/chongshengwang/IdeaProjects/sky-take-out/frontend/nginx-1.20.2/html/sky;
             index  index.html index.htm;
         }
 
@@ -61,7 +61,7 @@ http {
         #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   html;
+            root   /Users/chongshengwang/IdeaProjects/sky-take-out/frontend/nginx-1.20.2/html;
         }
 
         # 反向代理,处理管理端发送的请求
